kubernetes/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: devops
spec:
  selector:
    matchLabels:
      run: app
  replicas: 1
  template:
    metadata:
      labels:
        run: app
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-data
              mountPath: /var/db
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: devops
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    run: app
