kubernetes/oidc-dev.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-velero-oidc
  namespace: velero
  labels:
    app: myvelerooidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myvelerooidc
  template:
    metadata:
      labels:
        app: myvelerooidc
    spec:
      volumes:
        - name: client-config
          configMap: 
            name: my-velero-oidc-client
        - name: oidc-ssl
          secret: 
            secretName: oidc-ssl 
      containers:
        - name: my-velero-oidc
          image: docker.io/medinvention/oidc-server-mock-arm:0.12.1 #ghcr.io/soluto/oidc-server-mock:latest
          volumeMounts:
            - name: client-config
              mountPath: /etc/config
            - name: oidc-ssl
              mountPath: /https
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: my-velero-oidc-svc
  namespace: velero
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 4000
      targetPort: 8080
    - name: https
      port: 4001
      targetPort: 8443  
  selector:
    app: myvelerooidc
