kubernetes/minio-dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-velero-minio
  namespace: velero
  labels:
    app: myvelerominio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myvelerominio
  template:
    metadata:
      labels:
        app: myvelerominio
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      containers:
        - name: my-velero-minio
          image: bitnamilegacy/minio:2023.10.25 # 2023.4.20(v1)
          ports:
            - containerPort: 9000
              name: endpoint
            - containerPort: 9001
              name: console
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /bitnami/minio/data
              name: minio-data
          securityContext:
            runAsUser: 0
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: my-velero-minio-svc
  namespace: velero
spec:
  type: LoadBalancer
  ports:
    - name: endpoint
      port: 9000
      targetPort: 9000
  selector:
    app: myvelerominio

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
  name: my-velero-minio-ing
  namespace: velero
  labels:
    app: my-velero-minio
spec:
  rules:
    - host: myvelero-minio.medinvention.dev
      http:
        paths:
          - backend:
              serviceName: my-velero-minio-svc
              servicePort: endpoint
            path: /
  tls:
    - hosts:
        - myvelero-minio.medinvention.dev
      secretName: myvelerominio-tls
