kubernetes/my-velero.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-velero
  namespace: velero
  labels:
    app: myvelero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myvelero
  template:
    metadata:
      labels:
        app: myvelero
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/metrics'
        prometheus.io/port: '3001'
    spec:
      serviceAccountName: myvelero-sa
      containers:
      - name: my-velero
        image: medinvention/my-velero-dashboard:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        - containerPort: 3001
          protocol: TCP
        resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: my-velero-svc
  namespace: velero
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: myvelero

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: my-velero-ing
  namespace: velero
  labels:
    app: myvelero
spec:
  rules:
    - host: myvelero.medinvention.dev
      http:
        paths:
          - backend:
              serviceName: my-velero-svc
              servicePort: http
            path: /
  tls:
    - hosts:
      - myvelero.medinvention.dev
      secretName: myvelero-tls
